<resources>
    <string name="app_name">Mark Law Chambers</string>
    <string name="signin">Sign in</string>
    <string name="or">-OR-</string>
    <string name="fbLogin">Login with Facebook</string>
    <string name="dont">Don\'t have account? <font color='red'>Sign Up</font></string>


    //
    <string name="hello_world"><font color='red'>Hello world!</font></string>
    <string name="forgot">forgot password?</string>
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_password">Please Enter Password</string>
    <string name="already">Already Member ? <font color='red'>Login</font></string>
    <string name="signup">Sign Up</string>
    <string name="phone">Phone Number</string>
    <string name="name">Username</string>
    <string name="invalid_name">Please Enter Name</string>
    <string name="invalid_number">Please Enter Number</string>
    <string name="fbSignup">Sign Up with Facebook</string>
    <string name="enteremail">Enter Your Email</string>
    <string name="next">Next</string>
    <string name="facebook_app_id">2636157009847138</string>
    <string name="fb_login_protocol_scheme">fb2636157009847138</string>
    <string name="caseup">Case Updates</string>
    <string name="practice">Our Practice</string>
    <string name="sharing">Our Sharing</string>
    <string name="team">Our Team</string>
    <string name="visit">Visit Our Website</string>
    <string name="recent">RECENT ACTIVITIES</string>
    <string name="home">HOME</string>
    <string name="msg">MESSAGE</string>
    <string name="reach">REACH US</string>
    <string name="setting">SETTING</string>
    <string name="practicearea">Our Practice Area</string>
    <string name="casename">Case -1 PARK</string>
    <string name="fileref">FILE REF: HHQ/18/2345/A-18-08/KL</string>
    <string name="corance">Correncepondance</string>
    <string name="docu">Documents</string>
    <string name="back">Back</string>
    <string name="pdf">Pdf</string>
    <string name="advisor">OUR EXTERNAL ADVISOR</string>
    <string name="suprtteam">SUPPORTING TEAM</string>
    <string name="changePass">Change Password</string>
    <string name="logout">Logout</string>
    <string name="enterPass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="current">Current Password</string>
    <string name="invalid_message">Please Type Message</string>
</resources>
