<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/markbg"
        android:fillViewport="true"
        android:scrollbars="none">


        <RelativeLayout
            android:id="@+id/login_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentTop="true"
                android:onClick="back"
                android:src="@drawable/ic_arrow_back_black_24dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/logo_img"
                    style="@style/labelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot" />

                <LinearLayout
                    android:id="@+id/main_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo_img"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@drawable/white_outline_bg"
                        android:paddingRight="@dimen/_10sdp">


                        <EditText
                            android:id="@+id/forgotEmailEdt"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@null"
                            android:hint="@string/enteremail"
                            android:singleLine="true"
                            android:textColor="@color/colorWhite"
                            android:textColorHint="@color/colorWhite"
                            android:textSize="@dimen/_12sdp" />


                    </RelativeLayout>

                    <Button
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:background="@drawable/sign"
                        android:elevation="0dp"
                        android:gravity="center"
                        android:onClick="next"
                        android:stateListAnimator="@null"
                        android:text="@string/next"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_15ssp" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>
