<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/markbg"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentTop="true"
            android:onClick="back"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <LinearLayout
            android:id="@+id/settingMainLn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/changePass"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:onClick="changePass"
                android:text="@string/changePass"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logoutText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:onClick="logout"
                android:text="@string/logout"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:id="@+id/fbLn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                app:cardBackgroundColor="#4267B2"
                app:cardCornerRadius="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:src="@drawable/fbb" />

                    <TextView
                        android:id="@+id/logoutFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:onClick="logout"
                        android:text="Logout"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/passLn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:id="@+id/main_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/white_outline_bg"
                    android:paddingRight="@dimen/_10sdp">


                    <EditText
                        android:id="@+id/emailPassEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@null"
                        android:hint="@string/email"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textCursorDrawable="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />


                </RelativeLayout>


                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/white_outline_bg"
                    android:paddingRight="@dimen/_10sdp">


                    <EditText
                        android:id="@+id/newPassEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@null"
                        android:hint="@string/newpass"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textCursorDrawable="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />


                </RelativeLayout>


                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/white_outline_bg"
                    android:paddingRight="@dimen/_10sdp">


                    <EditText
                        android:id="@+id/renewPassEdt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@null"
                        android:hint="@string/confirmPass"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textCursorDrawable="@color/colorWhite"
                        android:textSize="@dimen/_12sdp" />


                </RelativeLayout>

                <Button
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/sign"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:onClick="next"
                    android:stateListAnimator="@null"
                    android:text="@string/next"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</layout>
