<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/markbg"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/login_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/_20sdp">

            <TextView
                android:id="@+id/logo_img"
                style="@style/labelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin" />

            <LinearLayout
                android:id="@+id/main_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_img"
                android:layout_marginTop="0dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/white_outline_bg"
                    android:paddingRight="@dimen/_10sdp">


                    <EditText
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@null"
                        android:hint="@string/email"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="@dimen/_12sdp"
                        android:textCursorDrawable="@color/colorWhite"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:src="@drawable/email" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/white_outline_bg"
                    android:paddingRight="@dimen/_10sdp">

                    <EditText
                        android:id="@+id/passEdit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@null"
                        android:hint="@string/pass"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="@dimen/_12sdp"
                        android:textCursorDrawable="@color/colorWhite"
                        android:inputType="textPassword"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="@dimen/_14sdp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:src="@drawable/lock" />
                    </LinearLayout>
                </RelativeLayout>

                <Button
                    android:id="@+id/signInBtn"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/sign"
                    android:elevation="0dp"
                    android:gravity="center"
                    android:onClick="signBtn"
                    android:stateListAnimator="@null"
                    android:text="@string/signin"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    style="@style/labelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/or"
                    android:textSize="@dimen/_15sdp" />


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />



              <!--  <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/facebook" />-->


                <!--      <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/colorFbBlue">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:src="@drawable/fb" />

                    <TextView
                        style="@style/labelTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/fbLogin"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>-->


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <TextView
                        android:id="@+id/signUpText"
                        style="@style/labelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="signUpBtn"
                        android:text="@string/dont"
                        android:textSize="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/forgotText"
                        style="@style/labelTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:onClick="forgotPassword"
                        android:text="@string/forgot"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
   </ScrollView>
</layout>