<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/whitebg"
        android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >

        <LinearLayout
            android:layout_above="@+id/bottom_ln"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/blur_team"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:onClick="back"
                    android:src="@drawable/ic_arrow_back_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
               android:layout_marginLeft="@dimen/_10sdp"
                android:id="@+id/team_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp" />

                <View android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/colorGrey"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advisor"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_15sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"/>

            <LinearLayout
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/ang"
                        android:scaleType="fitXY"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/advisor"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_10sdp"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Read More"
                        android:textColor="#E91515"
                        android:textSize="@dimen/_10sdp"
                        android:gravity="center" />



                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/_10sdp">



                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/pius"
                        android:scaleType="fitXY"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/advisor"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_10sdp"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Read More"
                        android:textColor="#E91515"
                        android:textSize="@dimen/_10sdp"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bottom_ln"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_8sdp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/message" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/msg"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_8sdp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/reach" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reach"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_8sdp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/setting" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/setting"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_8sdp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
    </ScrollView>
</layout>
